--- a/css/syles.css
+++ b/css/syles.css
@@ -82,14 +82,15 @@ ul {
 /*---------------HEADER--------------------*/
 
 .header {
+  padding: 24px 0;
   border-bottom: 1px solid var(--cornflower, #e7e9fc);
   background: var(--white);
 }
 
 .header-container {
-  padding: 24px 0;
   display: flex;
   align-items: center;
+  padding: 0 15px;
 }
 
 .header-logo {
