--- a/css/syles.css
+++ b/css/syles.css
@@ -132,6 +132,7 @@ ul {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  padding: 24px 0 24px;
 }
 
 .header-menu-link:hover,
